Update flux data attr based for different lightkurve versions

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .history
 src/lightkurve_ext/__pycache__/
 src/lightkurve_ext.egg-info/
-src/lightkurve_ext/*.ipynb
+src/*.ipynb
 Untitled-1.ipynb
 *.pf
 .pytest_cache/
